--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@edgestore/react": "^0.1.4",
+    "@edgestore/server": "^0.1.4",
     "@hookform/resolvers": "^3.3.2",
     "@material-tailwind/react": "^2.1.4",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -44,6 +46,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
