--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "email": "email dev"
   },
   "dependencies": {
     "@edgestore/react": "^0.1.4",
@@ -34,6 +35,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "0.0.11",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
@@ -48,9 +50,11 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-email": "1.9.5",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
+    "resend": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
