--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@material-tailwind/react": "^2.1.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.6.0-dev.84",
+    "@prisma/client": "^5.23.0-dev.10",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -38,11 +38,16 @@
     "@react-email/components": "0.0.11",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-table": "^8.10.7",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.288.0",
+    "mime-types": "^2.1.35",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
@@ -61,6 +66,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.44.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -72,7 +78,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.6.0-dev.84",
+    "prisma": "^5.23.0-dev.10",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
