--- a/package.json
+++ b/package.json
@@ -41,6 +41,13 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@uppy/core": "^4.2.3",
+    "@uppy/dashboard": "^4.1.2",
+    "@uppy/drag-drop": "^4.0.4",
+    "@uppy/file-input": "^4.0.3",
+    "@uppy/progress-bar": "^4.0.1",
+    "@uppy/react": "^4.0.3",
+    "@uppy/xhr-upload": "^4.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
