--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mime-types": "^2.1.35",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
+    "next-intl": "^3.26.3",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-day-picker": "^8.9.1",
@@ -68,6 +69,7 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
+    "react-slugify": "^4.0.1",
     "resend": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
