--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "email": "email dev"
   },
   "dependencies": {
-    "@edgestore/react": "^0.1.4",
+    "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.1.4",
     "@hookform/resolvers": "^3.3.2",
     "@material-tailwind/react": "^2.1.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -53,23 +53,25 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "core-js": "^3.39.0",
     "date-fns": "^2.30.0",
     "formidable": "^3.5.2",
     "lucide-react": "^0.469.0",
     "mime-types": "^2.1.35",
-    "next": "^13.5.4",
-    "next-auth": "^4.23.0",
+    "next": "^14.2.22",
+    "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
+    "next-themes": "^0.4.4",
+    "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-email": "1.9.5",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-slugify": "^4.0.1",
+    "recharts": "^2.15.0",
     "resend": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -77,6 +79,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.8",
     "@types/eslint": "^8.44.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "^18.16.0",
@@ -90,7 +93,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.23.0-dev.10",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
